--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
 
 .container{
   box-sizing: border-box;
-  margin: auto;
-  max-width: 400px;
+  min-width: 380px;
+  max-width: 414px;
   height: 100vh;
   max-height: 100vh;
   background-color: rgb(250, 253, 255);
@@ -44,3 +44,6 @@ input{
 }
 
 
+@media (max-width: 380px) {
+  
+}
